--- a/ProductModule/pom.xml
+++ b/ProductModule/pom.xml
@@ -63,5 +63,10 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.firebase</groupId>
+			<artifactId>firebase-admin</artifactId>
+			<version>6.8.1</version>
+		</dependency>
 	</dependencies>
 </project>
