--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_PRODUCT_API=
+NEXT_PUBLIC_PRODUCT_API=localhost:8080
 NEXT_PUBLIC_REVIEW_API=
 NEXT_PUBLIC_SHOP_API=
 NEXT_PUBLIC_SHIPPING_API=
